Add Google verification meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Astrochem</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="dc.creator" content="Rémi Prévost - http://remiprevost.com" />
+    <meta name="google-site-verification" content="cW9w5vakVNnnuALg6IkWga2awCVB2P5B5uMI71YIYWI" />
     <link rel="stylesheet" href="./css/screen.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="./css/fonts/megalopolisextra/megalopolisextra.css" type="text/css" media="screen" />
   </head>
