New Astrochem version

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ abundances = H3(+),e(-),C(+),CO,HCO(+)</code></pre>
 	  </li>
 	  <li>
 	    <div class="row group button button-large">
-	      <p><a href="http://cloud.github.com/downloads/smaret/astrochem/astrochem-0.4.tar.gz">Download Astrochem</a></p>
-	      <div id="version"><p>Version 0.4</p></div>
+	      <p><a href="http://cloud.github.com/downloads/smaret/astrochem/astrochem-0.5.tar.gz">Download Astrochem</a></p>
+	      <div id="version"><p>Version 0.5 (October 15, 2012)</p></div>
 	    </div>
 	  </li>
           <li>
