New Astrochem version (0.6)

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@ abundances = H3(+),e(-),C(+),CO,HCO(+)</code></pre>
 		  the comprehensive documentation manual.</a></p>
 	      </div>
 	      <div class="col-2">
-		<p class="button"><a href="http://cloud.github.com/downloads/smaret/astrochem/astrochem.pdf">Read
+		<p class="button"><a href="https://github.com/smaret/astrochem/releases/download/0.6/astrochem-0.6.pdf">Read
 		the documentation manual</a></p>
 	      </div>	      
 	    </div>
 	  </li>
 	  <li>
 	    <div class="row group button button-large">
-	      <p><a href="http://cloud.github.com/downloads/smaret/astrochem/astrochem-0.5.tar.gz">Download Astrochem</a></p>
-	      <div id="version"><p>Version 0.5 (October 15, 2012)</p></div>
+	      <p><a href="https://github.com/smaret/astrochem/releases/download/0.6/astrochem-0.6.tar.gz">Download Astrochem</a></p>
+	      <div id="version"><p>Version 0.6 (November 4, 2014</p></div>
 	    </div>
 	  </li>
           <li>
