--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ abundances = H3(+),e(-),C(+),CO,HCO(+)</code></pre>
 	  <li>
 	    <div class="row group button button-large">
 	      <p><a href="https://github.com/smaret/astrochem/releases/download/0.6/astrochem-0.6.tar.gz">Download Astrochem</a></p>
-	      <div id="version"><p>Version 0.6 (November 4, 2014</p></div>
+	      <div id="version"><p>Version 0.6 (November 4, 2014)</p></div>
 	    </div>
 	  </li>
           <li>
