Documentation is now online

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@ abundances = H3(+),e(-),C(+),CO,HCO(+)</code></pre>
 	    <div class="group row">
 	      <div class="col-1">
 		<p>Want to learn more about Astrochem? Have a look at
-		  the comprehensive documentation manual.</a></p>
+		  the comprehensive online documentation.</a></p>
 	      </div>
 	      <div class="col-2">
-		<p class="button"><a href="https://github.com/smaret/astrochem/releases/download/0.6/astrochem-0.6.pdf">Read
-		the documentation manual</a></p>
+		<p class="button"><a href="http://astrochem.readthedocs.io/en/latest/">Read
+		the documentation</a></p>
 	      </div>	      
 	    </div>
 	  </li>
